# mrhat-rtcwake-cpp

./: CMakeLists.txt  README.md  deps.json  irtc.hpp  main.cpp  mrhat-rtcwake.code-workspace  mrhat_integration.cpp  mrhat_integration.hpp  rtc_dev.cpp  rtc_dev_cm5.cpp  rtc_mock.cpp  rtc_tools.cpp  rtc_utils.hpp
.github/workflows/: release.yml
test/: adj  test_mrhat_integration.cpp  test_rtc.cpp  test_utils.cpp
